<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetLeft="@dimen/activity_horizontal_margin"
        app:navigationIcon="@drawable/ic_keyboard_backspace_black_24dp"
        app:title="疑难问题"
        app:titleTextColor="@android:color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:text="  问题一:设备不能连接WIFI"
                android:textColor="#009688"
                android:textScaleX="1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/string_operational_problem_1"
                android:textColor="#202020"
                android:textScaleX="1"
                android:textSize="16sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:text="  问题二:微信播报失败"
                android:textColor="#009688"
                android:textScaleX="1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/string_operational_problem_2"
                android:textColor="#202020"
                android:textScaleX="1"
                android:textSize="16sp" />

            <TextView


                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:text="  问题三:手机锁屏或黑屏失效"
                android:textColor="#009688"
                android:textScaleX="1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/string_operational_problem_3"
                android:textColor="#202020"
                android:textScaleX="1"
                android:textSize="16sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:text="  问题四:收款有时播报有时不播报"
                android:textColor="#009688"
                android:textScaleX="1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/string_operational_problem_4"
                android:textColor="#202020"
                android:textScaleX="1"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>




