<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetLeft="@dimen/activity_horizontal_margin"
        app:navigationIcon="@drawable/ic_keyboard_backspace_black_24dp"
        app:title="操作说明"
        app:titleTextColor="@android:color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:text="  一:配网和绑定"
                android:textColor="#009688"
                android:textScaleX="1"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/string_operational_explain_1"
                android:textColor="#202020"
                android:textScaleX="1"
                android:textSize="16sp" />

            <cn.jzvd.JZVideoPlayerStandard
                android:id="@+id/jz_video_player"
                android:layout_width="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="15dp"
                android:layout_height="225dp"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.5"
                android:text="  二:APP设置"
                android:textColor="#009688"
                android:textScaleX="1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/string_operational_explain_2"
                android:textColor="#202020"
                android:textScaleX="1"
                android:textSize="16sp" />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="65dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.4"
                android:text="@string/string_operational_explain_3"
                android:textColor="#673AB7"
                android:textScaleX="1"
                android:textSize="16sp" />




        </LinearLayout>
    </ScrollView>
</LinearLayout>




